@@ -23,7 +23,7 @@ opt_custom_build_msg="Built for you with Hercules-Helper"
 git_repo_hercules="https://github.com/Hercules-Aethra/aethra.git"
 
 # Git checkout branch for Hercules-Aethra
-git_branch_hercules=master
+git_branch_hercules=develop
 
 # Git checkout commit for Hercules-Aethea
 # git_commit_hercules=77a23a2
